--- a/Josh.html
+++ b/Josh.html
@@ -1,1 +1,21 @@
-<p> gang gang</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+    <link rel="stylesheet" href="Joshapp.css">
+</head>
+<body>
+    <div class="QuestionBox">
+        <div class="Question"> 
+            <h1> Why can't I run fast in my dreams?</h1>
+        </div>
+        <div class = "inputs">
+            <input type="text">
+            <button class = "answerbutton"> Submit </button>
+        </div>
+        <script src="JoshScript.js"></script>
+</body>
+</html>
