Big Chango Arrango

--- a/Josh.html
+++ b/Josh.html
@@ -10,11 +10,14 @@
 <body>
     <div class="QuestionBox">
         <div class="Question"> 
-            <h1> Why can't I run fast in my dreams?</h1>
+            <h1></h1>
         </div>
         <div class = "inputs">
-            <input type="text">
-            <button class = "answerbutton"> Submit </button>
+            <input type="text" id="answer">
+            <button onclick = "CheckAnswer()" class = "answerbutton"> Submit </button>
+        </div>
+        <div id="josh_r">
+
         </div>
         <script src="JoshScript.js"></script>
 </body>
