added health bar

--- a/question.html
+++ b/question.html
@@ -4,6 +4,10 @@
         <link href="question.css" rel="stylesheet"/>
     </head>
     <body>
+            <div id="healthBar">
+                    <p id="outline"></p>
+                    <p id="fill"></p>
+                </div>  
         <div class="everything_1">
             <div class="questionBox_1">
              <div id="question_1">
