added files from this class

--- a/Josh.html
+++ b/Josh.html
@@ -6,19 +6,31 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="Joshapp.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="name.css">
 </head>
 <body>
+    <div id="HealthMenu">
+        <div id="HealthBar">
+        </div>
+    </div>
     <div class="QuestionBox">
         <div class="Question"> 
             <h1></h1>
         </div>
         <div class = "inputs">
+           
             <input type="text" id="answer">
             <button onclick = "CheckAnswer()" class = "answerbutton"> Submit </button>
-        </div>
+          
+    </div>
+    <div id = "InnerText">
+    </div>
         <div id="josh_r">
 
         </div>
         <script src="JoshScript.js"></script>
+        <script src="healthbar.js"></script>
+
 </body>
 </html>
